--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,8 +1,8 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
+               [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+               [mode]="(isHandset$ | async) ? 'over' : 'side'"
+               [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/dashboard">Dashboard</a>
@@ -13,12 +13,11 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="true">
+      <button type="button"
+              aria-label="Toggle sidenav"
+              mat-icon-button
+              (click)="drawer.toggle()"
+              *ngIf="true">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span> DB Best PWA</span>
@@ -26,6 +25,7 @@
     <div id="main-content">
       <div class="dbbest-img">
         <img src="/assets/dbbest.jpg" alt="DB Best" />
+        <button mat-raised-button *ngIf="!isA2HSConfirm" id="a2hs-button">Add to home screen</button>
       </div>
       <router-outlet></router-outlet>
     </div>
