--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -25,7 +25,7 @@
     <div id="main-content">
       <div class="dbbest-img">
         <img src="/assets/dbbest.jpg" alt="DB Best" />
-        <button mat-raised-button *ngIf="!isA2HSConfirm" (click)="a2hs()">Add to home screen</button>
+        <app-a2hs></app-a2hs>
       </div>
       <router-outlet></router-outlet>
     </div>
